# GaiaConnections

./: .gitignore  CMakeLists.txt  README.md
ChannelConneciton/: Channel.cpp  Channel.hpp
PacketConnection/: CMakeLists.txt  Packet.cpp  Packet.hpp  PacketConnection.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp
